hphp/hack/test/typecheck/expression_trees/static_method_call.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

final class MyClass {
  public static async function bar(
    ExampleContext $_,
  ): Awaitable<ExprTree<Code, Code::TAst, (function(ExampleString): ExampleInt)>> {
    throw new Exception();
  }
}

function foo(): void {
  $fun_call = Code`MyClass::bar("baz")`;
}
